styles.css
*,*::before,*::after{
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: 'Roboto', sans-serif;
}

/* Neumorphism Colors */
:root{
  --light: #E0E5EC;
  --midLight: #C2CBD9;
  --lightGrey: #A3B1C6;

  --containerWidth: 1200px;
  --customBoxShadow: 9px 9px 16px rgb(163,177,198,0.6), -9px -9px 16px    rgba(255,255,255, 0.5);
  --padding: 2rem;
  --borderRadius: 9px;
}



body{
  width: 100%;
  height: 100%;
}

.header{
  background-color: var(--light);
  box-shadow: var(--customBoxShadow);
}

.header nav{
  display: flex;
  align-items: center;

  max-width: var(--containerWidth);
  margin: 0 auto;
  padding: 2rem 2rem 1rem 2rem;
}

.header nav svg {
  margin-right: 1rem;
  margin-bottom: 5px;
}

.header nav h1 {
  font-size: 2.5rem;

}

.mainContainer{
  max-width: var(--containerWidth);
  padding: var(--padding);
  margin: 0 auto;
}

.btn{
  padding: 1.5rem;
  border-radius: var(--borderRadius);
}

.btn-add {
  display: flex;
  align-items: center;
  border: none;
  margin: 0 auto;
  font-size: 24px;
  font-weight: 700;
  background-color: white;
  transition: ease-in-out 0.1s;
}

.btn-add svg {
  margin-right: 0.5rem;
}

.btn-add:hover{
  box-shadow: var(--customBoxShadow);
  background-color: var(--light);
  cursor: pointer;
  transition: ease-in-out 0.1s;
}

.btn-add:active{
  transform: scale(0.9);
  transition: ease-in-out 0.1s;
}

.booksGrid{
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
  gap: var(--padding);
  margin-top: var(--padding);
}

.bookCard{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  padding: var(--padding);
  background-color: var(--light);
  border-radius: var(--borderRadius);
  box-shadow: var(--customBoxShadow);
  transition: all 0.15s ease-in-out;
}

.bookCard:hover{
  transform: translate(-0.75rem, -0.75rem);
  box-shadow: 9px 9px 16px rgba(163, 177, 198, 0.253), -9px -9px 16px    rgba(255, 255, 255, 0.164);;
}

.bookCard p{
  font-size: 1.3rem;
  font-weight: 300;
  margin-bottom: 1rem;
  text-align: center;
}

.bookCard p:first-of-type{
  font-weight: 900;
  font-size: 1.5rem;
}

.bookCard button{
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 2rem;
  font-weight: 500;
  font-size: 1rem;
  cursor: pointer;
}

.bookCard button:first-of-type{
  margin-bottom: 1rem;
}

.bookCard button:last-of-type{
  font-weight: 300;
  border: none;
  background-color: var(--light);
  transition: ease-in-out 0.1s;
}
.bookCard button:last-of-type:hover{
  box-shadow: var(--customBoxShadow);
  transition: ease-in-out 0.1s;
}

.bookCard button:last-of-type:active{
  transform: scale(0.9);
}

.completedBtn{
  background-color: #25A031;
  border: none;
}

.notCompletedBtn{
  background-color: #D63C2D;
  border: none;
}



/*  */
.overlay{    
  position: fixed;
  top: 0;
  left: 0;
  display: none;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
}

.formContainer{
  position: fixed;
  z-index: 1;
  top: 50%;
  left: 50%;
  width: 300px;
  padding: var(--padding);
  border-radius: var(--borderRadius);
  background-color: white;
  transform: translate(-50%, -50%);
  text-align: center;
  display: none;

}
.active {
  display: block;
}

.add-book-form {
  text-align: center;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.add-book-form h3 {
  margin-bottom: 1rem;
  font-weight: 900;
}

.add-book-form button {
  border: none;
  font-size: 1.25rem;
  font-weight: 900;
  letter-spacing: 1px;
  width: 100%;
  background-color: white;
  padding: 1rem;
}

.add-book-form button:hover {
  box-shadow: var(--customBoxShadow);
  cursor: pointer;
  transition: ease-in-out 0.1s;
}

.add-book-form button:focus{
  transform: scale(0.9);
  transition: ease-in-out 0.1s;
}

input {
  width: 100%;
  padding: 0.75rem;
  margin: 0.5rem;
  border-radius: var(--borderRadius);
  border: var(--lightGrey) solid 1px;
  font-size: 1rem;
  font-weight: 700;
}

input:focus{
  box-shadow: var(--customBoxShadow);
  outline: none;
}

.is-read{
  width: 75%;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  padding: 1rem 0 1rem 0;
}

.is-read label{
  font-weight: 700;
  font-size: 1rem;
}

.is-read input{
  box-shadow: none;
  width: 20%;
  transform: scale(2);
}

